prevent foit; cache fonts and video (#1032)
* Tell browsers to use system font til webfont loads.

This prevents possible FOIT (flash of invisible text).

* nginx: cache fonts and video

--- a/docs/css/fonts.css
+++ b/docs/css/fonts.css
@@ -5,6 +5,7 @@
         url("/css/fonts/SourceCodePro-Regular/SourceCodePro-Regular.ttf.woff")  format("woff"),
         url("/css/fonts/SourceCodePro-Regular/SourceCodePro-Regular.ttf")       format("truetype"),
         url("/css/fonts/SourceCodePro-Regular/SourceCodePro-Regular.eot")       format("embedded-opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
         url("/css/fonts/SourceSansPro-Regular/SourceSansPro-Regular.ttf.woff") format("woff"),
         url("/css/fonts/SourceSansPro-Regular/SourceSansPro-Regular.ttf") format("truetype"),
         url("/css/fonts/SourceSansPro-Regular/SourceSansPro-Regular.eot") format("embedded-opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +26,7 @@
         url("/css/fonts/SourceSansPro-Semibold/SourceSansPro-Semibold.ttf") format("truetype"),
         url("/css/fonts/SourceSansPro-Semibold/SourceSansPro-Semibold.eot") format("embedded-opentype");
     font-weight: bold;
+    font-display: swap;
 }
 
 @font-face {
@@ -33,7 +36,8 @@
         url("/css/fonts/SourceSansPro-It/SourceSansPro-It.ttf.woff") format("woff"),
         url("/css/fonts/SourceSansPro-It/SourceSansPro-It.ttf") format("truetype"),
         url("/css/fonts/SourceSansPro-It/SourceSansPro-It.eot") format("embedded-opentype");
-    font-style : italic;
+    font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -43,8 +47,9 @@
         url("/css/fonts/SourceSansPro-SemiboldIt/SourceSansPro-SemiboldIt.ttf.woff") format("woff"),
         url("/css/fonts/SourceSansPro-SemiboldIt/SourceSansPro-SemiboldIt.ttf") format("truetype"),
         url("/css/fonts/SourceSansPro-SemiboldIt/SourceSansPro-SemiboldIt.eot") format("embedded-opentype");
-    font-style : italic;
+    font-style: italic;
     font-weight: bold;   
+    font-display: swap;
 }
 
 html, body {
